@@ -4,6 +4,8 @@ PluggableAuthService changelog
 PluggableAuthService 1.7 (unreleased)
 -------------------------------------
 
+- Launchpad #300321:  ZODBGroupManager.enumerateGroups failed to find
+  groups with unicode IDs.
 
 PluggableAuthService 1.6 (2008-08-05)
 -------------------------------------
